headlamp/kubernetes-headlamp.yaml
kind: Service
apiVersion: v1
metadata:
  name: headlamp
  namespace: headlamp
spec:
  ports:
    - port: 8080
      targetPort: 4466
  selector:
    k8s-app: headlamp
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: headlamp
  namespace: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: headlamp
  template:
    metadata:
      labels:
        k8s-app: headlamp
    spec:
      containers:
      - name: headlamp
        image: ghcr.io/headlamp-k8s/headlamp:v0.16.0
        args:
          - "-in-cluster"
          - "-plugins-dir=/headlamp/plugins"
          - "-oidc-client-id=kubernetes"
          - "-oidc-client-secret=ahLczN5jWWMUsQb4424j7G0wQep9ycqP"
          - "-oidc-idp-issuer-url=https://keycloak.icnp.in-soft.co.kr/realms/master"
        ports:
        - containerPort: 4466
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 4466
          initialDelaySeconds: 30
          timeoutSeconds: 30
