headlamp/headlamp-ingress-tls.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - "*.incp.in-soft.co.kr"
    - secretName: headlamp-tls 
  rules:
  - host: headlamp.icnp.in-soft.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port: 
              number: 8080
